--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/dik-FT5g2Oc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/A56207455Y" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/N72330202P" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -58,7 +58,7 @@
     </header>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 9000000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 0); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
