--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ src="https://www.facebook.com/tr?id=588212325986884&ev=PageView&noscript=1"
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>después de 8 años de estudios, el doctor John revela cómo derretir mucha grasa en poco tiempo con ingredientes simple</b></h3>
+            <h3 class="my-4"><b>Después de 8 años de estudios, médico revela cómo derretir mucha grasa en poco tiempo con ingredientes simple</b></h3>
             <span id="number"></span> personas están viendo este video ahora
 <script>
 function add(){number+=Math.floor((Math.random()*6)+1);document.getElementById("number").innerHTML=number;setTimeout("add()",10000);}        
