--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ generate();</script>
 
 
             <!-- VSL -->
-            <div id="vid_63209eb88dfc5d00091907c3" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63209eb88dfc5d00091907c3" src="https://images.converteai.net/65edb886-8a0d-45d8-b159-34d8f062a68e/players/63209eb88dfc5d00091907c3/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63209eb88dfc5d00091907c3" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63209eb88dfc5d00091907c3">var s=document.createElement("script");s.src="https://scripts.converteai.net/65edb886-8a0d-45d8-b159-34d8f062a68e/players/63209eb88dfc5d00091907c3/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_634f52cbf5fc1e000ba57a8f" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_634f52cbf5fc1e000ba57a8f" src="https://images.converteai.net/9a72d9bb-1f54-4fa4-9a99-668067d6de38/players/634f52cbf5fc1e000ba57a8f/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_634f52cbf5fc1e000ba57a8f" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_634f52cbf5fc1e000ba57a8f">var s=document.createElement("script");s.src="https://scripts.converteai.net/9a72d9bb-1f54-4fa4-9a99-668067d6de38/players/634f52cbf5fc1e000ba57a8f/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/N72330202P" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">¡SI, QUIERO ACCEDER!</span>
+                <span class="span-btn">¡SI, QUIERO ACCEDER!Sólo hoy 50% off $ 13,50</span>
                 <span class="span-btn2">(Atención: plazas limitadas)</span>
               </a>
             </div>
@@ -446,7 +446,7 @@ generate();</script>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/N72330202P" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">¡QUIERO CAMBIAR DE VIDA!</span>
+                <span class="span-btn">¡QUIERO CAMBIAR DE VIDA!Sólo hoy 50% off $ 13,50</span>
                 <span class="span-btn2">(Atención: plazas limitadas)</span>
               </a>
             </div>
