--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ generate();</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/N72330202P" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">¡SI, QUIERO ACCEDER!Sólo hoy 50% off $ 13,50</span>
+                <span class="span-btn">¡SI, QUIERO ACCEDER!Sólo hoy 50% off </span>
                 <span class="span-btn2">(Atención: plazas limitadas)</span>
               </a>
             </div>
@@ -446,7 +446,7 @@ generate();</script>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/N72330202P" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">¡QUIERO CAMBIAR DE VIDA!Sólo hoy 50% off $ 13,50</span>
+                <span class="span-btn">¡QUIERO CAMBIAR DE VIDA!Sólo hoy 50% off </span>
                 <span class="span-btn2">(Atención: plazas limitadas)</span>
               </a>
             </div>
